Cleanup and solved 32.